manifest_files/pod_monitoring.yml
apiVersion: v1
kind: Pod
metadata:
  name: monitoring-pod
  labels:
    app: monitoring
spec:
  containers:
    - name: prometheus
      image: prom/prometheus:latest
      ports:
        - containerPort: 9090
      volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/
      args:
        - "--config.file=/etc/prometheus/prometheus.yml"
    - name: grafana
      image: grafana/grafana:latest
      ports:
        - containerPort: 3000
  volumes:
    - name: prometheus-config
      configMap:
        name: prometheus-config
