manifest_files/deploy_backend_mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationski-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stationski-app
  template:
    metadata:
      labels:
        app: stationski-app
    spec:
      containers:
      # MySQL Container
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql-port

      # Backend Container
      - name: backend
        image: fatnassihnifinassim353/nassimfatnassi-g1-stationski:0.0.2
        ports:
        - containerPort: 9000
          name: backend-port

---
# Service pour mysql stationski-app
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  selector:
    app: stationski-app
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# Service pour stationski-app
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: stationski-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: backend
