manifest_files/deploy_frontend.yml
# Frontend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationski-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: fatnassihnifinassim353/front-g1-stationski:latest
        ports:
        - containerPort: 80
          name: frontend-port

---
# Service pour frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: frontend
