manifest_files/monitoring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
spec:
  type: LoadBalancer
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
    - name: grafana
      port: 3000
      targetPort: 3000
  selector:
    app: monitoring
